# django-nanopages

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt
django_nanopages/: __init__.py  nanodjango.py  page.py  pages.py  views.py
django_nanopages/templates/django_nanopages/: page.html
docs/: changelog.rst  conf.py  contexts.rst  contributing.rst  get_started.rst  howto.rst  index.rst  static.rst  tutorial.rst  usage.rst
example/: requirements.txt  website.py
example/pages/: about.md  index.html
example/pages/blog/: cookies.md  index.md  work.html
tests/: conftest.py  requirements.txt  settings.py  test_example.py  test_page.py  test_pages.py  test_views.py
